Test y documentacion
Se agregaron las pruebas unitarias y se documento parte del codigo